# Grid-based-boustrophedon-coverage-planner

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
path_coverage_algorithm/: BCD_algorithm.py  __main__.py  matrix.py  visualization.py
