[project]
name = "path-coverage-algorithm"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Harsha Vardhan",email = "harshavardhanchelluri@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
